5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2507.log
== SUBMITION (2019-05-15 13:43:05) 
-- CODE:
tam = float(input("Quant. para peixe: "))
pcres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * pcres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.143141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:43:14) 
-- CODE:
tam = float(input("Quant. para peixe: "))
pcres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * pcres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.170673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:42) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.168037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:44) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.150002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:44) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.261644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:44) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.240819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:45) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.357303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:44:45) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- EXECUTION TIME:
0.30855
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:44:45) 
-- CODE:
tam = float(input("Quant. para peixe: "))
cres = float(input("Percentual de cres: "))
q = int(input("Quant. de vendas: "))

ano = 0
while (tam > 0 and tam < 1200):
	y = tam * cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(anos)
NameError: name 'anos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:51:40) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
	print("ZERO"):
print(t)
-- EXECUTION TIME:
0.17827
-- ERROR:
  File "/home/codebench/codes/1712/2507/main.py", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:53:00) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
	print("ZERO"):
print(t)
-- ERROR:
File "XXXX", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:53:13) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
print("ZERO"):
print(t)
-- ERROR:
File "XXXX", line 12
    print("ZERO"):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:53:18) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
	print("ZERO"):
print(t)
-- EXECUTION TIME:
0.130061
-- ERROR:
  File "/home/codebench/codes/1712/2507/main.py", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:53:34) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
	print("ZERO"):
print(t)
-- ERROR:
File "XXXX", line 12
    print("ZERO"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:53:52) 
-- CODE:
qi = int(input("Q inicial: "))
pc = float(input("Percentual de crescimento: "))
t = 0
while (qi > 0 and qi < 8000):
	qv = int(input("Q para venda: "))
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 8000):
	print("MAXIMO")
elif (qi <= 0):
	print("ZERO")
print(t)
-- EXECUTION TIME:
0.223341
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
